# LuxPythonEnvGym

./: README.md  pyproject.toml  setup.py
.claude/: settings.local.json
examples/: agent_policy.py  train.py
examples/baseline/: reinforcement-learning-openai-ppo-with-python-game-clean.ipynb  reinforcement-learning-openai-ppo-with-python-game.ipynb
kaggle_submissions/: download_dependencies.py
luxai2021/env/: agent.py  lux_env.py
